# ofx-rs

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  parser.rs  sgml.rs
src/aggregates/: available_balance.rs  balance.rs  bank_account.rs  cc_statement_response.rs  credit_card_account.rs  currency.rs  error.rs  inv_statement_response.rs  investment_account.rs  ledger_balance.rs  mod.rs  payee.rs  statement_response.rs  statement_transaction.rs  status.rs  transaction_list.rs  transaction_wrapper.rs
src/document/: banking_message_set.rs  cc_message_set.rs  investment_message_set.rs  mod.rs  ofx_document.rs  signon_response.rs
src/header/: error.rs  mod.rs  ofx_header.rs  ofx_version.rs  security_level.rs
src/types/: account_id.rs  account_type.rs  balance_type.rs  bank_id.rs  branch_id.rs  check_number.rs  correction_action.rs  correction_id.rs  currency_code.rs  fit_id.rs  inv401k_source.rs  mod.rs  ofx_amount.rs  ofx_boolean.rs  ofx_date_time.rs  server_transaction_id.rs  severity.rs  transaction_type.rs  validated_string.rs
src/xml/: helpers.rs  mod.rs  reader.rs
tests/: parse_investment_test.rs  parse_multi_transaction_test.rs  parse_new_fixtures_test.rs  parse_statement_test.rs  parse_test_vectors.rs
tests/fixtures/: credit_card_statement.ofx  invstmtrs.ofx  mercury-checking.ofx  multi_transaction_statement.ofx  sgml_header_statement.ofx  simple_bank_statement.ofx
